handle command files